fixed ref to obj file

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 				};
 
 				var loader = new THREE.OBJLoader( manager );
-				loader.load( 'models/stone.obj', function ( object ) {
+				loader.load( 'models/Stone.obj', function ( object ) {
 
 					object.traverse( function ( child ) {
 
