--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
 					} );
 
-					object.position.y = - 95;
+					object.position.y = 95;
 					scene.add( object );
 
 				}, onProgress, onError );
