--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 				};
 				var onError = function ( xhr ) { };
 				var mtlLoader = new THREE.MTLLoader();
-				mtlLoader.load( 'models/Stone.mtl', function( materials ) {
+				mtlLoader.load( 'models/male02.mtl', function( materials ) {
 					materials.preload();
 					var objLoader = new THREE.OBJLoader();
 					objLoader.setMaterials( materials );
