--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 					materials.preload();
 					var objLoader = new THREE.OBJLoader();
 					objLoader.setMaterials( materials );
-					objLoader.load( 'models/Stone.obj', function ( object ) {
+					objLoader.load( 'models/male02.obj', function ( object ) {
 						object.position.y = 0;
 						object.castShadow = true;
 						object.receiveShadow = true;
