--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 
 		<script src="js/three.js"></script>
 		<script src="js/controls/controls.js"></script>
+		<script src="js/loaders/MTLLoader.js"></script>
+		<script src="js/loaders/OBJLoader.js"></script>
 
 		<div id="blocker">
 
