--- a/index.html
+++ b/index.html
@@ -135,10 +135,11 @@
 		<script>
 			(function(){var script=document.createElement('script');script.onload=function(){var stats=new Stats();document.body.appendChild(stats.dom);requestAnimationFrame(function loop(){stats.update();requestAnimationFrame(loop)});};script.src='//rawgit.com/mrdoob/stats.js/master/build/stats.min.js';document.head.appendChild(script);})()
 
-			var box9, box8, box7, box10;
+			var box9, box8, box7, box10, floor2;
 			var audio, playbtn, music, pausebtn;
 			var rockObject;
 			var camera, scene, renderer, controls;
+			var gamePause;
 			var objects = [];
 			var objects2 = [];
 			var objects3 = [];
@@ -575,7 +576,7 @@
 						var floorMaterial = new THREE.MeshBasicMaterial({ vertexColors: THREE.VertexColors} );
 						var floor = new THREE.Mesh( floorGeometry, floorMaterial );
 						var floorMaterial2 = new THREE.MeshBasicMaterial({ vertexColors: THREE.VertexColors} );
-						var floor2 = new THREE.Mesh( floorGeometry2, floorMaterial2 );
+						floor2 = new THREE.Mesh( floorGeometry2, floorMaterial2 );
 						scene.add( floor, floor2 );
 						//
 						renderer = new THREE.WebGLRenderer();
@@ -603,12 +604,13 @@
 					raycasterWall.ray.origin.copy( controls.getObject().position );
 					raycasterWall.ray.origin.y -= 10;
 					var intersections = raycaster.intersectObjects( objects);
-					var intersections2 = raycaster.intersectObjects( objects2);
+						var intersections2 = raycaster.intersectObjects( objects2);
 					var intersections3 = raycaster.intersectObjects( objects3);
 					var intersections4 = raycasterWall.intersectObject( box10);
 					var intersections5 = raycasterWall.intersectObject( box9);
 					var intersections6 = raycasterWall.intersectObject( box8);
 					var intersections7 = raycasterWall.intersectObject( box7);
+					var intersections8 = raycasterWall.intersectObject( floor2);
 					var onObject = intersections.length > 0;
 					var onObject2 = intersections2.length > 0;
 					var onObject3 = intersections3.length > 0;
@@ -616,6 +618,7 @@
 					var onObject5 = intersections5.length > 0;
 					var onObject6 = intersections6.length > 0;
 					var onObject7 = intersections7.length > 0;
+					var onFloor = intersections8.length > 0;
 					var time = performance.now();
 					var delta = ( time - prevTime ) / 1000;
  					velocity.x -= velocity.x * 10.0 * delta;
@@ -624,63 +627,73 @@
 					direction.z = Number( moveForward ) - Number( moveBackward );
 					direction.x = Number( moveLeft ) - Number( moveRight );
 					direction.normalize(); // this ensures consistent movements in all directions
-					if ( moveForward || moveBackward ) velocity.z -= direction.z * 400.0 * delta;
-					if ( moveLeft || moveRight ) velocity.x -= direction.x * 400.0 * delta;
-					if ( onObject === true ) {
-						velocity.y = 400;
-						canJump = false;
+					if (gamePause){
+					velocity.x -= 0;
+					velocity.z -= 0;
+					velocity.y -= 0;
 					}
-					if ( onObject2 === true ) {
-						velocity.y = Math.max( 0, velocity.y );
-						canJump = true;
+					else{
+						if ( moveForward || moveBackward ) velocity.z -= direction.z * 400.0 * delta;
+						if ( moveLeft || moveRight ) velocity.x -= direction.x * 400.0 * delta;
+						if ( onObject === true ) {
+							velocity.y = 400;
+							canJump = false;
+						}
+						if ( onObject2 === true ) {
+							velocity.y = Math.max( 0, velocity.y );
+							canJump = true;
+						}
+						if ( onObject3 === true ) {
+							velocity.y = Math.max(-7, velocity.y);
+							canJump = false;
+						}
+						if ( onObject4 === true ) {
+						   if (moveForward == true){
+						   velocity.z = 200;
+						}if (moveBackward == true){
+						   velocity.z = -200;
+						}if (moveRight == true){
+						   velocity.x = -200;
+						}if (moveLeft == true){
+						   velocity.x = 200;
+						}
+						}
+						if ( onObject5 === true ) {
+						   if (moveForward == true){
+						   velocity.z = 200;
+						}if (moveBackward == true){
+						   velocity.z = -200;
+						}if (moveRight == true){
+						   velocity.x = -200;
+						}if (moveLeft == true){
+						   velocity.x = 200;
+						}
+						}
+						if ( onObject6 === true ) {
+						   if (moveForward == true){
+						   velocity.z = 200;
+						}if (moveBackward == true){
+						   velocity.z = -200;
+						}if (moveRight == true){
+						   velocity.x = -200;
+						}if (moveLeft == true){
+						   velocity.x = 200;
+						}
+						}
+						if ( onObject7 === true ) {
+						   if (moveForward == true){
+						   velocity.z = 200;
+						}if (moveBackward == true){
+						   velocity.z = -200;
+						}if (moveRight == true){
+						   velocity.x = -200;
+						}if (moveLeft == true){
+						   velocity.x = 200;
+						}
+						}
 					}
-					if ( onObject3 === true ) {
-						velocity.y = Math.max(-7, velocity.y);
-						canJump = false;
-					}
-					if ( onObject4 === true ) {
-					   if (moveForward == true){
-					   velocity.z = 200;
-					}if (moveBackward == true){
-					   velocity.z = -200;
-					}if (moveRight == true){
-					   velocity.x = -200;
-					}if (moveLeft == true){
-					   velocity.x = 200;
-					}
-					}
-					if ( onObject5 === true ) {
-					   if (moveForward == true){
-					   velocity.z = 200;
-					}if (moveBackward == true){
-					   velocity.z = -200;
-					}if (moveRight == true){
-					   velocity.x = -200;
-					}if (moveLeft == true){
-					   velocity.x = 200;
-					}
-					}
-					if ( onObject6 === true ) {
-					   if (moveForward == true){
-					   velocity.z = 200;
-					}if (moveBackward == true){
-					   velocity.z = -200;
-					}if (moveRight == true){
-					   velocity.x = -200;
-					}if (moveLeft == true){
-					   velocity.x = 200;
-					}
-					}
-					if ( onObject7 === true ) {
-					   if (moveForward == true){
-					   velocity.z = 200;
-					}if (moveBackward == true){
-					   velocity.z = -200;
-					}if (moveRight == true){
-					   velocity.x = -200;
-					}if (moveLeft == true){
-					   velocity.x = 200;
-					}
+					if (onFloor){
+						gamePause = true;
 					}
                     //--------------------------------------------------------//
                                      //makes lava go up//
