--- a/index.html
+++ b/index.html
@@ -672,6 +672,7 @@
 						}
 					}
 					if (onFloor){
+						scene.fog = new THREE.Fog( 0xE76201, 0, 60);
 						gamePause = true;
 					}
                     //--------------------------------------------------------//
