--- a/index.html
+++ b/index.html
@@ -609,6 +609,7 @@
 					direction.normalize(); // this ensures consistent movements in all directions
 					if (gamePause){
 						defPointerUnlockElement.exitPointerLock();
+						document.getElementById("continueBtn").style.display === "none";
 
 					}
 					else{
