--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
 					} 
 					prevTime = time;
 				}
-				currentScore = round(camera.getWorldPosition().y-10)
+				currentScore = round(camera.getWorldPosition().y-10);
 				if (currentScore > score)
 				{
 					score = currentScore;
