--- a/index.html
+++ b/index.html
@@ -302,11 +302,11 @@
 			function init() {
 				var mtlLoader = new THREE.MTLLoader();
 				mtlLoader.load( 'models/Rock1.mtl', function( materials ) {
-					materials.color.set(0xff0000);
 					materials.preload();
 					var objLoader = new THREE.OBJLoader();
 					objLoader.setMaterials( materials );
 					objLoader.load( 'models/Rock1.obj', function ( object ) {
+						object.setHSL ( 0.5,0.5,0.5 );
 						camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 1, 350 );
 						scene = new THREE.Scene();
 						scene.background = new THREE.Color( 0x660000 );
