--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
 					direction.normalize(); // this ensures consistent movements in all directions
 					if (gamePause){
 						defPointerUnlockElement.exitPointerLock();
-						document.getElementById("continueBtn").style.display === "none";
+						document.getElementById("continueBtn").style.display = "none";
 
 					}
 					else{
