--- a/index.html
+++ b/index.html
@@ -465,7 +465,6 @@
 						// objects
 						var boxMaterial = new THREE.MeshPhongMaterial({color:0xff0000, transparent:true, opacity:0, side: THREE.DoubleSide});
 						for ( var i = 0; i < 600; i ++ ) {
-							boxMaterial.color.setHSL( Math.random() * 0.2 + 0.5, 0.75, Math.random() * 0.25 + 0.75 );
 
 							var box = new THREE.Mesh( boxGeometry, boxMaterial );
 							var randomXPos = Math.floor( Math.random() * 20 - 10 ) * 7;
@@ -487,7 +486,7 @@
 							objects.push( box );
 						}
 					      
-	                    var boxMaterial2 = new THREE.MeshPhongMaterial({color:0xff0000, transparent:true, opacity:0, side: THREE.DoubleSide});
+	                    var boxMaterial2 = new THREE.MeshPhongMaterial({color:0x00FFF6, transparent:true, opacity:0, side: THREE.DoubleSide});
 						for ( var i = 0; i < 1400; i ++ ) {
 
 							var box2 = new THREE.Mesh( boxGeometry2, boxMaterial2 );
